opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://git.robur.io/robur/mirage-monitoring"
doc: "https://roburio.github.io/mirage-monitoring"
dev-repo: "git+https://git.robur.io/robur/mirage-monitoring.git"
bug-reports: "https://github.com/roburio/mirage-monitoring/issues"
license: "AGPL-3.0-only"

depends: [
  "ocaml" {>= "4.11.0"}
  "dune"
  "logs" {>= "0.6.3"}
  "metrics" {>= "0.4.0"}
  "metrics-lwt" {>= "0.2.0"}
  "metrics-influx" {>= "0.2.0"}
  "mirage-time" {>= "2.0.0"}
  "tcpip" {>= "7.0.0"}
  "mirage-solo5" {>= "0.6.4"}
  "ocaml-freestanding" {>= "0.4.5"}
  "mirage-runtime"
  "memtrace-mirage" {>= "0.2.1.2.2"}
  "mirage-clock" {>= "4.0.0"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis: "Monitoring of MirageOS unikernels"
description: """
Reporting metrics to Influx, Telegraf. Dynamic adjusting log level and metrics
sources, memprof profiling.
"""
